@@ -9,6 +9,9 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
   the value of TMPDIR, which can cause third-party tests to fail if they
   compare ${HOME} with $(pwd).
 
+* Issue 85: Improved the TAP parser to recognize tests marked TODO or
+  SKIP as passed.
+
 
 Changes in version 0.2
 ======================
